namespace YummyZoom.Domain.OrderAggregate.Enums;

public enum PaymentStatus
{
    Pending,
    Succeeded,
    Failed
}
